// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomePage > renders the "Resume game" button if an active game exists 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="icon"
          >
            <div
              class="main"
            >
              <div
                class="float"
              >
                <img
                  alt="Klurigo"
                  class="image"
                  src="/src/assets/images/klurigo-icon.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="hero"
          >
            <h1
              class="typography hero medium"
            >
              Let’s play
            </h1>
          </div>
          <div
            class="message"
          >
            <div
              data-testid="rotating-message"
            >
              <p
                class="typography text small"
              >
                Ready to show off your skills? Let’s go!
              </p>
            </div>
          </div>
          <div
            class="callToActionCard"
          >
            <button
              class="button"
              type="button"
            >
              <div
                class="content"
              >
                <div
                  class="title"
                >
                  <div
                    class="spacing"
                  />
                  Resume game
                </div>
                <div
                  class="text"
                >
                  Jump back in where you left off
                </div>
              </div>
              <div
                class="icon"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </button>
          </div>
          <form
            class="joinForm form"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-game-pin-textfield"
                  id="game-pin"
                  maxlength="6"
                  minlength="6"
                  name="game-pin"
                  placeholder="Game PIN"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction"
            >
              <button
                data-testid="test-join-button"
                disabled=""
                id="join"
                name="join"
                type="submit"
              >
                <span>
                  Join the game
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </form>
          <a
            class="link typography link small"
            data-discover="true"
            href="/auth/login"
          >
            Want to create your own quiz? Log in to get started!
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomePage > renders the base layout and the rotating message container 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="icon"
          >
            <div
              class="main"
            >
              <div
                class="float"
              >
                <img
                  alt="Klurigo"
                  class="image"
                  src="/src/assets/images/klurigo-icon.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="hero"
          >
            <h1
              class="typography hero medium"
            >
              Let’s play
            </h1>
          </div>
          <div
            class="message"
          >
            <div
              data-testid="rotating-message"
            >
              <p
                class="typography text small"
              >
                Ready to show off your skills? Let’s go!
              </p>
            </div>
          </div>
          <form
            class="joinForm form"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-game-pin-textfield"
                  id="game-pin"
                  maxlength="6"
                  minlength="6"
                  name="game-pin"
                  placeholder="Game PIN"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction"
            >
              <button
                data-testid="test-join-button"
                disabled=""
                id="join"
                name="join"
                type="submit"
              >
                <span>
                  Join the game
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </form>
          <a
            class="link typography link small"
            data-discover="true"
            href="/auth/login"
          >
            Want to create your own quiz? Log in to get started!
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
